Update workflow to use root flake8 config

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Install dependencies
         run: pip install -r Server/requirements.txt -r Worker/requirements.txt -r Server/requirements-dev.txt
       - name: Run flake8
-        run: flake8 .
+        run: flake8 --config .flake8 .
       - name: Run tests
         run: pytest -q
