Add worker Dockerfile and document env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
       - redis
 
   worker:
-    image: hashmancer-worker:latest
+    build:
+      context: .
+      dockerfile: Worker/Dockerfile
     volumes:
       - ~/.hashmancer:/root/.hashmancer
     depends_on:
