--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,18 @@ name = "hashmancer"
 version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "fastapi==0.116.1",
+    "uvicorn==0.35.0",
+    "redis==6.2.0",
+    "requests==2.32.4",
+    "pydantic==2.11.7",
+    "cryptography==45.0.5",
+    "python-multipart==0.0.20",
+    "psutil==7.0.0",
+    "filelock==3.18.0",
+    "argon2-cffi==25.1.0",
+]
 
 [project.scripts]
 hashmancer-server = "hashmancer.server.__main__:main"
