Enhance darkling backends and tests

--- a/hashmancer/darkling/CMakeLists.txt
+++ b/hashmancer/darkling/CMakeLists.txt
@@ -14,13 +14,21 @@ if(ENABLE_CUDA)
 endif()
 
 if(ENABLE_HIP)
-  find_package(HIP REQUIRED)
-  hip_add_library(hip_backend STATIC hip_backend/hip_cracker.cpp hip_backend/darkling_engine.hip)
+  find_package(HIP)
+  if(HIP_FOUND)
+    hip_add_library(hip_backend STATIC hip_backend/hip_cracker.cpp hip_backend/darkling_engine.hip)
+  else()
+    message(WARNING "HIP toolchain not found - skipping HIP backend")
+  endif()
 endif()
 
 if(ENABLE_OPENCL)
-  find_package(OpenCL REQUIRED)
-  add_library(opencl_backend STATIC intel_backend/intel_cracker.cpp)
-  target_sources(opencl_backend PRIVATE intel_backend/opencl_kernel.cl)
-  target_link_libraries(opencl_backend PRIVATE OpenCL::OpenCL)
+  find_package(OpenCL)
+  if(OpenCL_FOUND)
+    add_library(opencl_backend STATIC intel_backend/intel_cracker.cpp)
+    target_sources(opencl_backend PRIVATE intel_backend/opencl_kernel.cl)
+    target_link_libraries(opencl_backend PRIVATE OpenCL::OpenCL)
+  else()
+    message(WARNING "OpenCL not found - skipping OpenCL backend")
+  endif()
 endif()
